--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,24 +1,40 @@
 ---
-title: Why Tailwind?
-description: "We'll go over the current UX landscape in Cosmos and why 
-your Dapp will benefit immensely from integrating Tailwind."
+title: Why TAILWIND?
+description: "$3B+ of Interchain liquidity is 1-click away with TAILWIND." 
 ---
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
+  src="/images/hero-dark.png"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block rounded-lg"
-  src="/images/dark.png"
+  src="/images/hero-dark.png"
   alt="Hero Dark"
 />
 
-## Bringing Users to your Cosmos Dapp
+## Bring Liquidity to Your Cosmos Application
+We'll go over the current UX landscape in Cosmos and why 
+your Dapp will benefit immensely from integrating Tailwind.
 
-While app-chains scale very well, consumers hate app-chain UX. Because
-each app is on a new chain, users are required to move tokens before using
+## The Problem 
+
+{/* I still think this section should focus on the Dapp's needs,
+like wanting users and wanting to dominate. Some apps are app-chains,
+and they have slightly different incentives. */}
+
+Cosmos community has always led in blockchain architecture and vision, 
+pioneering proof of stake, app-chains, CosmWasm, 
+and its crown jewel, IBC.
+
+Yet, the Cosmos user base has never been as big as other leading ecosystems, like Ethereum and Solana. Why? 
+
+<Tip>
+We believe the wallet experience is holding back crypto natives and consumers from fully experiencing the Interchain.
+</Tip>
+
+Because each app is on a new chain, users are required to move tokens before using
 a new app. Funds are easily fragmented across chains, and IBC makes them path-dependent, 
 requiring developer expertise to un-wind. 
 
@@ -33,7 +49,7 @@ do 3-5 additional clicks to get requisite gas.
 In the worst case, they get their money stuck and stop using your 
 application altogether.
 
-## Why Tailwind?
+## The Solution
 
 Tailwind enables a seamless cross-chain experience for your users. Before using 
 your Dapp, users no longer have to transfer tokens. Their tokens are automatically
@@ -41,6 +57,18 @@ moved and gas provisioned before signing.
 
 With Tailwind, users can bring liquidity to your application in 1-click, as opposed 
 to 5 or more.  
+
+<img
+  className="block"
+  src="/images/1-click.jpeg"
+  alt="1-click"
+/>
+
+<Tip>
+  Bringing $3B+ of Interchain liquidity to your Dapp has never been easier.
+  You can focus on building a great application, instead of worrying about
+  cross-chain token migrations or gas provisioning.
+</Tip>
 
 { /*
  
@@ -60,24 +88,24 @@ for the document you requested is delivered.
 
 <CardGroup cols={2}>
   <Card
-    title="Using Cosmoskit"
+    title="With Cosmoskit"
     icon="pen-to-square"
     href="https://mintlify.com/docs/quickstart"
   >
     Integrate right away by adding 
-    2 lines of code to your Cosmoskit.
+    3 lines of code to your Cosmoskit integration.
   </Card>
-  <Card
+  {/* <Card
     title="Using Tailwind API"
     icon="code"
     href="https://mintlify.com/docs/development"
   >
-    Take advantage of Tailwind's full capabilities using 
-    our Custom API. 
-  </Card>
+    Contact our Devs on Discord to get 
+    help to our NPM package.
+  </Card> */}
 </CardGroup>
 
-## Make it yours
+{/* ## Make it yours
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
@@ -110,4 +138,4 @@ Update your docs to your brand and add valuable content for the best user conver
   >
     Check out our showcase of our favorite documentation
   </Card>
-</CardGroup>
+</CardGroup> */}
