removed unnecessary tabs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -90,7 +90,7 @@ for the document you requested is delivered.
   <Card
     title="With Cosmoskit"
     icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    href="/cosmoskit"
   >
     Integrate right away by adding 
     3 lines of code to your Cosmoskit integration.
