--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Why TAILWIND?
-description: "$3B+ of Interchain liquidity is 1-click away with TAILWIND." 
+description: "$3B+ of Interchain liquidity is 1-click away with your 
+Cosmos wallet from the future." 
 ---
 
 <img
