--- a/introduction.mdx
+++ b/introduction.mdx
@@ -23,7 +23,10 @@ your Dapp will benefit immensely from integrating Tailwind.
 
 {/* I still think this section should focus on the Dapp's needs,
 like wanting users and wanting to dominate. Some apps are app-chains,
-and they have slightly different incentives. */}
+and they have slightly different incentives.
+@todo add a picture here of the current UX landscape in Cosmos,
+and how your Dapp benefits from integrating Tailwind.
+ */}
 
 Cosmos community has always led in blockchain architecture and vision, 
 pioneering proof of stake, app-chains, CosmWasm, 
