--- a/cosmoskit.mdx
+++ b/cosmoskit.mdx
@@ -35,10 +35,11 @@ function MyCosmosApp({ Component, pageProps }: AppProps) {
 export default MyCosmosApp;
 ```
 </Step>
-</Steps>
-
-Tailwind is supported! To use our 1-click source funds and gas 
+<Step title="Done!">
+Tailwind is now supported! To use our 1-click source funds and gas 
 API, please follow the next section.
+</Step>
+</Steps>
 
 # 1-Click Sign API
 
