All the categories

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,7 +1,6 @@
 ---
 title: Why TAILWIND?
-description: "$3B+ of Interchain liquidity is 1-click away with your 
-Cosmos wallet from the future." 
+description: "Experience 50+ Cosmos chains without all the hassle of bridging and managing gas." 
 ---
 
 <img
@@ -15,79 +14,21 @@ Cosmos wallet from the future."
   alt="Hero Dark"
 />
 
-## Bring Liquidity to Your Cosmos Application
-We'll go over the current UX landscape in Cosmos and why 
-your Dapp will benefit immensely from integrating Tailwind.
+# Move Faster with TAILWIND
+Stop wasting your time with 5-10 clicks or more to source funds between chains,
+to swap for gas, or waste money on unnecessary fees. 
 
-## The Problem 
+Tailwind is designed to make experiencing 50+ chains feel like one, 
+by optimally moving funds and gas automatically for users, 
+reducing UX from 5-10 clicks or more, to one.
 
-{/* I still think this section should focus on the Dapp's needs,
-like wanting users and wanting to dominate. Some apps are app-chains,
-and they have slightly different incentives.
-@todo add a picture here of the current UX landscape in Cosmos,
-and how your Dapp benefits from integrating Tailwind.
- */}
-
-Cosmos community has always led in blockchain architecture and vision, 
-pioneering proof of stake, app-chains, CosmWasm, 
-and its crown jewel, IBC.
-
-Yet, the Cosmos user base has never been as big as other leading ecosystems, like Ethereum and Solana. Why? 
-
-<Tip>
-We believe the wallet experience is holding back crypto natives and consumers from fully experiencing the Interchain.
-</Tip>
-
-Because each app is on a new chain, users are required to move tokens before using
-a new app. Funds are easily fragmented across chains, and IBC makes them path-dependent, 
-requiring developer expertise to un-wind. 
-
-To make things worse, each app has their own gas token. Users have to 
-do 3-5 additional clicks to get requisite gas. 
-
-<Tip>
-  For example, to stake ATOM on Umee, users need to swap for UMEE gas on Osmosis, 
-  send UMEE out, send ATOM out, and then go to the Dapp.
-</Tip>
-
-In the worst case, they get their money stuck and stop using your 
-application altogether.
-
-## The Solution
-
-Tailwind enables a seamless cross-chain experience for your users. Before using 
-your Dapp, users no longer have to transfer tokens. Their tokens are automatically
-moved and gas provisioned before signing. 
-
-With Tailwind, users can bring liquidity to your application in 1-click, as opposed 
-to 5 or more.  
-
-<img
+<img 
   className="block"
   src="/images/1-click.jpeg"
   alt="1-click"
 />
 
-<Tip>
-  Bringing $3B+ of Interchain liquidity to your Dapp has never been easier.
-  You can focus on building a great application, instead of worrying about
-  cross-chain token migrations or gas provisioning.
-</Tip>
-
-{ /*
- 
-## How is this Possible? 
-
-Tailwind inspects the document that you, the developer, requested signing for, 
-and automatically provision funds and gas from the document info. 
-
-To the user, this experience is done in 1-click, but under the hood,
-multiple documents are provisioned, signed, and broadcasted before the signature
-for the document you requested is delivered.
-
-*/ }
-
-## Integrate in Under 5 Minutes
+# Pay gas with any token, on any chain 
 
 
 <CardGroup cols={2}>
@@ -108,38 +49,3 @@ for the document you requested is delivered.
     help to our NPM package.
   </Card> */}
 </CardGroup>
-
-{/* ## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup> */}
