get-tailwind docs

--- a/get-tailwind.mdx
+++ b/get-tailwind.mdx
@@ -5,17 +5,51 @@ description: 'Download the extension and get an account.'
 
 <Tip>
   If you have another Cosmos wallet installed, 
-  you should use a Chrome profile. 
+  you should use a new Chrome profile to download TAILWIND.
+  This will prevent any conflicts between the two wallets.
 </Tip>
 
 <Steps>
   <Step title="Install the extension.">
-    Download the Chrome extension.  
+    Download the [Chrome extension](https://chromewebstore.google.com/detail/dpnfollacokcbkeiidhplhjpafkbfacj).
+    Click on the extension after download to start onboarding.
   </Step>
-  <Step title="Create or import mnemonic through onboarding flow">
+  <Step title="Enter invite code to begin onboarding. ">
+    First enter a valid invite code. If you don't 
+    have an invite, we do weekly drops on our 
+    [Discord](https://discord.com/invite/ATX4vuAxeR).
+    <img
+      className="block"
+      src="/images/enter-invite-code.png"
+      alt="Enter invite code"
+    />
+    Create or import mnemonic during onboarding flow. You can
+    create a new account or import an existing account
+    from another wallet (Keplr, Leap, MetaMask, etc.). 
+    <img
+      className="block"
+      src="/images/import.png"
+      alt="Create or import"
+    />
+
+    Your keys are encrypted and never leaves the extension.
+    Do NOT share or lose your Secret Recovery Phrase.
   </Step>
   <Step title="Done!">
-    You can use our dashboard. 
+    <img 
+      className="block"
+      src="/images/social-links.png"
+      alt="Dashboard"
+    />
+    Click on "Go to Dapp" to use our dashboard. Pin the extension for best experience. 
+
+    You will be asked for permission from www.tailwind.zone to see your account address.
+    <img 
+      className="block"
+      src="/images/permissions.png"
+      alt="Permission"
+    />
+    Click "Approve" to use the Dashboard. Only approve permissions for sites you trust.
   </Step>
 
 </Steps>
