--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Why TAILWIND?
-description: "Experience 50+ Cosmos chains without all the hassle of bridging and managing gas." 
+description: "Experience 50+ Cosmos chains like a Pro, without all the hassle of bridging and managing gas." 
 ---
 
 <img
@@ -13,6 +13,23 @@ description: "Experience 50+ Cosmos chains without all the hassle of bridging an
   src="/images/hero-dark.png"
   alt="Hero Dark"
 />
+
+# Pay gas with USDC
+
+You can pay gas with USDC across all Cosmos chains.
+
+If you prefer to pay gas with another token, we have over 100+ tokens 
+like OSMO, TIA, STRD, STARS, to choose from. 
+
+Never get your money stuck on a chain again.
+
+<img
+  className="block"
+  src="/images/pay-gas-usdc.png"
+  alt="Pay Gas with USDC"
+/>
+
+
 
 # Move Faster with TAILWIND
 Stop wasting your time with 5-10 clicks or more to source funds between chains,
@@ -27,25 +44,3 @@ reducing UX from 5-10 clicks or more, to one.
   src="/images/1-click.jpeg"
   alt="1-click"
 />
-
-# Pay gas with any token, on any chain 
-
-
-<CardGroup cols={2}>
-  <Card
-    title="With Cosmoskit"
-    icon="pen-to-square"
-    href="/cosmoskit"
-  >
-    Integrate right away by adding 
-    3 lines of code to your Cosmoskit integration.
-  </Card>
-  {/* <Card
-    title="Using Tailwind API"
-    icon="code"
-    href="https://mintlify.com/docs/development"
-  >
-    Contact our Devs on Discord to get 
-    help to our NPM package.
-  </Card> */}
-</CardGroup>
