talk to user directly

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -16,12 +16,11 @@ description: "Experience 50+ Cosmos chains like a Pro, without all the hassle of
 
 # Pay gas with USDC
 
-You can pay gas with USDC across all Cosmos chains.
+You can pay gas with USDC across all Cosmos chains. 
 
 If you prefer to pay gas with another token, we have over 100+ tokens 
-like OSMO, TIA, STRD, STARS, to choose from. 
+like OSMO, TIA, STRD, STARS, to choose from. Never get your money stuck on a chain again.
 
-Never get your money stuck on a chain again.
 
 <img
   className="block"
@@ -36,7 +35,7 @@ Stop wasting your time with 5-10 clicks or more to source funds between chains,
 to swap for gas, or waste money on unnecessary fees. 
 
 Tailwind is designed to make experiencing 50+ chains feel like one, 
-by optimally moving funds and gas automatically for users, 
+by optimally moving funds and gas automatically for you, 
 reducing UX from 5-10 clicks or more, to one.
 
 <img 
