--- a/bug-bounties/intro.mdx
+++ b/bug-bounties/intro.mdx
@@ -8,12 +8,13 @@ While TAILWIND is heavily tested and audited, bug bounties help us make the
 wallet even <span text="white">smoother and safer</span>. 
 
 Report bugs in our Discord under the [Bug Hunting channel](https://discord.gg/EMxptbxqFb). 
-We will review and award prizes based on category of the bug found,  
+We will review and award prizes based on category of the bug found, according to the 
+criteria below:
 
 | Category                | Description                                                            | Award Prize
 | ----------------------- | -----------------------------------------------------------------------| ------- 
-| UX Bug                  | Something confusing or counter-intuitive                             | $50
-| Incorrect behavior      | Wanted to do something but action does not complete it               | $100
+| UX Bug                  | Something confusing or counter-intuitive, slowed you down or frustrated you       | $50
+| Incorrect behavior      | Wanted to do something but action does the wrong thing or does not complete it    | $100
 | Failed transactions     | Failed transactions if found wallet was issue                        | $50
 | Feature Request         | Any feature request that we end up building                          | $40
 | Incorrect Data Display  | Incorrect or stale data displayed in the wallet or exchange          | $40 
