--- a/bug-bounties/whitehat.mdx
+++ b/bug-bounties/whitehat.mdx
@@ -21,6 +21,6 @@ according to the criteria below:
 | Critical / Catastrophic      | A bug that allows an attacker to steal funds with minimal or without any user interaction    | $10,000
 | Major                        | A bug that locks up funds or prevents users from accessing their funds, or allows an attacker to steal funds under rare, highly unlikely circumstances       | $1,000
 
-Please report any vulnerabilities discretely 
-to `bao@tailwind.zone`.
+Under the unlikely scenario that a major or critical bug bypassed our audits, 
+please report any vulnerabilities discretely to `bao@tailwind.zone`.
  
