fixed copy to remove beta

--- a/get-tailwind.mdx
+++ b/get-tailwind.mdx
@@ -12,16 +12,14 @@ description: 'Download the extension and get an account.'
 <Steps>
   <Step title="Install the extension.">
     Download the [Chrome extension](https://chromewebstore.google.com/detail/dpnfollacokcbkeiidhplhjpafkbfacj).
-    Click on the extension after download to start onboarding.
+    <span className="text-white">Click on the extension</span> after download to start onboarding.
   </Step>
-  <Step title="Enter invite code to begin onboarding. ">
-    First enter a valid invite code. If you don't 
-    have an invite, we do weekly drops on our 
-    [Discord](https://discord.com/invite/ATX4vuAxeR).
-    <img
+  <Step title="Create or import mnemonic to begin onboarding."> 
+    You should see this screen after clicking on the extension.
+     <img
       className="block"
-      src="/images/enter-invite-code.png"
-      alt="Enter invite code"
+      src="/images/onboard.png"
+      alt="Create or import"
     />
     Create or import mnemonic during onboarding flow. You can
     create a new account or import an existing account
