--- a/intro.mdx
+++ b/intro.mdx
@@ -1,6 +1,6 @@
 ---
 title: Why TAILWIND?
-description: "Experience 50+ Cosmos chains like a Pro, without all the hassle of bridging and managing gas." 
+description: "Experience Sei without all the hassle of bridging and managing gas." 
 ---
 
 <img
@@ -16,7 +16,7 @@ description: "Experience 50+ Cosmos chains like a Pro, without all the hassle of
 
 # Pay gas with USDC
 
-You can pay gas with USDC across all Cosmos chains. 
+You can pay gas with USDC across SEI and the entire Interchain. 
 
 If you prefer to pay gas with another token, we have over 100+ tokens 
 like OSMO, TIA, STRD, STARS, to choose from. Never get your money stuck on a chain again.
