cosmos -> sei and new strategy copy

--- a/get-tailwind.mdx
+++ b/get-tailwind.mdx
@@ -4,9 +4,8 @@ description: 'Download the extension and get an account.'
 ---
 
 <Tip>
-  If you have another Cosmos wallet installed, 
-  you should use a new Chrome profile to download TAILWIND.
-  This will prevent any conflicts between the two wallets.
+  If you have another Sei wallet installed, 
+  you can click on any other wallet option to switch to TAILWIND.
 </Tip>
 
 <Steps>
