--- a/intro.mdx
+++ b/intro.mdx
@@ -1,45 +1,31 @@
 ---
-title: Why TAILWIND?
-description: "Experience Sei without all the hassle of bridging and managing gas." 
+title: Why TAILWIND VENTURES?
+description: "Become a VC on-chain. Buy, sell, launch pre-sale tokens before they hit DEXes." 
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-dark.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block rounded-lg"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+TAILWIND is a protocol for launching pre-sale tokens on Sei. 
+You can participate in pre-sales (with or without team allocation) 
+before the token doubles in price and migrate to DEXes (Astroport or DragonSwap).
 
-# Pay gas with USDC
+<Tip>
+Tokens can be up to 12 times cheaper before they move to DragonSwap or Astroport.
+</Tip>
 
-You can pay gas with USDC across SEI and the entire Interchain. 
+# What are pre-sale tokens?
 
-If you prefer to pay gas with another token, we have over 100+ tokens 
-like OSMO, TIA, STRD, STARS, to choose from. Never get your money stuck on a chain again.
+Pre-sale tokens are tokens that are bought and sold by insiders at much cheaper prices
+before they are available to others. Pre-sale participants get the best prices before 
+the tokens get launched on DEXes.
+
+# How does TAILWIND work?  
 
 
-<img
-  className="block"
-  src="/images/pay-gas-usdc.png"
-  alt="Pay Gas with USDC"
-/>
+1. 🛍️ Pick a pre-sale token
 
+2. 🛒 Buy the token
 
+3. 💵 Sell at any time until funding goal is met
 
-# Move Faster with TAILWIND
-Stop wasting your time with 5-10 clicks or more to source funds between chains,
-to swap for gas, or waste money on unnecessary fees. 
+4. 🚀 When token reaches 9,000 SEI, your holdings are locked. Token doubles in price and migrates to DEXes
 
-Tailwind is designed to make experiencing 50+ chains feel like one, 
-by optimally moving funds and gas automatically for you, 
-reducing UX from 5-10 clicks or more, to one.
-
-<img 
-  className="block"
-  src="/images/1-click.jpeg"
-  alt="1-click"
-/>
+5. ⬆️ Then token vests linearly for its duration (20 minutes) and you have access to liquidity. Vesting protects you from bots snipers.
