--- a/get-tailwind.mdx
+++ b/get-tailwind.mdx
@@ -1,52 +1,35 @@
 ---
-title: 'Get TAILWIND'
-description: 'Download the extension and get an account.'
+title: 'Use TAILWIND'
+description: 'How to use TAILWIND VENTURES.'
 ---
 
-<Tip>
-  If you have another Sei wallet installed, 
-  you can click on any other wallet option to switch to TAILWIND.
-</Tip>
-
 <Steps>
-  <Step title="Install the extension.">
-    Download the [Chrome extension](https://chromewebstore.google.com/detail/dpnfollacokcbkeiidhplhjpafkbfacj).
-    <span className="text-white">Click on the extension</span> after download to start onboarding.
+  <Step title="🛍️ Pick a pre-sale token">
+    <img 
+      className="block"
+      src="/images/step-pick.png"
+      alt="pick"
+      />
   </Step>
-  <Step title="Create or import mnemonic to begin onboarding."> 
-    You should see this screen after clicking on the extension.
+  <Step title="🛒 Buy the token"> 
      <img
       className="block"
-      src="/images/onboard.png"
-      alt="Create or import"
+      src="/images/step-buy.png"
+      alt="Buy"
     />
-    Create or import mnemonic during onboarding flow. You can
-    create a new account or import an existing account
-    from another wallet (Keplr, Leap, MetaMask, etc.). 
-    <img
-      className="block"
-      src="/images/import.png"
-      alt="Create or import"
-    />
-
-    Your keys are encrypted and never leaves the extension.
-    Do NOT share or lose your Secret Recovery Phrase.
   </Step>
+  <Step title="💵 Sell at any time until funding goal is met">
+  Click sell tab to toggle mode..
+       <img
+      className="block"
+      src="/images/step-sell.png"
+      alt="sell"/>     
+  </Step>
+  <Step title="🚀 When token reaches 9,000 SEI, your holdings are locked. Token doubles in price and migrates to DEXes"> 
+    
+  </Step>
+  
   <Step title="Done!">
-    <img 
-      className="block"
-      src="/images/social-links.png"
-      alt="Dashboard"
-    />
-    Click on "Go to Dapp" to use our dashboard. Pin the extension for best experience. 
-
-    You will be asked for permission from www.tailwind.zone to see your account address.
-    <img 
-      className="block"
-      src="/images/permissions.png"
-      alt="Permission"
-    />
-    Click "Approve" to use the Dashboard. Only approve permissions for sites you trust.
   </Step>
 
 </Steps>
