--- a/get-tailwind.mdx
+++ b/get-tailwind.mdx
@@ -26,10 +26,27 @@ description: 'How to use TAILWIND VENTURES.'
       alt="sell"/>     
   </Step>
   <Step title="🚀 When token reaches 9,000 SEI, your holdings are locked. Token doubles in price and migrates to DEXes"> 
-    
+    Anyone can click migrate button to migrate the token to Astroport or DragonSwap.
+    <img
+      className="block"
+      src="/images/step-migrate.png"
+      alt="migrate"
+      />
+  </Step>
+
+  <Step title="⬆️ Then token vests linearly for its duration (20 minutes) and you have access to liquidity.">
+  Vesting protects you from bots snipers.
+    <img 
+      className="block"
+      src="/images/step-vest.png"
+      alt="vesting"
+      />
+
   </Step>
   
   <Step title="Done!">
+    You will have access to 100% of tokens at end of vesting period.
+    We help your token well after it is launched.
   </Step>
 
 </Steps>
